<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.task.TaskFragment">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent">
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:scrollbars="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxCornerRadiusTopEnd="0dp"
                    app:boxCornerRadiusTopStart="0dp"
                    app:boxCornerRadiusBottomEnd="0dp"
                    app:boxCornerRadiusBottomStart="0dp"
                    app:boxBackgroundColor="?attr/colorSurface"
                    android:elevation="4dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etTask"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/TaskDescription"
                        android:gravity="top"
                        android:minLines="10" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0.7dp"
                    app:cardMaxElevation="1dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true"
                    android:layout_marginTop="@dimen/text_margin">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:id="@+id/completedLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/text_margin"
                            android:orientation="horizontal"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?android:attr/selectableItemBackgroundBorderless">
                            <ImageView
                                android:id="@+id/ivCompleted"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginEnd="@dimen/text_margin"
                                app:srcCompat="@drawable/ic_uncheck_circle" />

                            <TextView
                                android:id="@+id/tvCompleted"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/CompleteTask"/>
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="56dp"
                            android:background="?android:attr/listDivider" />

                        <LinearLayout
                            android:id="@+id/importantLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/text_margin"
                            android:orientation="horizontal"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?android:attr/selectableItemBackgroundBorderless">
                            <ImageView
                                android:id="@+id/ivImportant"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginEnd="@dimen/text_margin"
                                app:srcCompat="@drawable/ic_favorite_border" />

                            <TextView
                                android:id="@+id/tvImportant"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/ImportantTask"/>
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="56dp"
                            android:background="?android:attr/listDivider" />

                        <LinearLayout
                            android:id="@+id/dueDateLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/text_margin"
                            android:orientation="horizontal"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?android:attr/selectableItemBackgroundBorderless">
                            <ImageView
                                android:id="@+id/ivDueDate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginEnd="@dimen/text_margin"
                                app:srcCompat="@drawable/ic_calendar"
                                app:tint="@color/disable"/>

                            <TextView
                                android:id="@+id/tvDueDate"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:layout_gravity="center"
                                android:text="@string/TaskAddDueDate"/>

                            <ImageView
                                android:id="@+id/ivDeleteDueDate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="@dimen/text_margin"
                                app:srcCompat="@drawable/ic_clear"
                                android:clickable="true"
                                android:focusable="true"
                                android:background="?android:attr/selectableItemBackgroundBorderless"
                                android:visibility="gone"/>
                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/deleteTaskLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:background="?attr/colorSurface"
            android:elevation="24dp"
            android:visibility="gone">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/DeleteTask"
                android:layout_gravity="center"
                android:textColor="?attr/colorError"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/text_margin"
                app:srcCompat="@drawable/ic_delete_task"/>
        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>